# aisoc-lab

./: .gitignore  PIXELAGENTS_STATUS.md  README.md  aisoc.config.example  aisoc_demo.sh  deploy_aisoc_demo.sh
.github/workflows/: README.md  deploy-aisoc-orchestrator.yml  deploy-aisoc-runner.yml  deploy-pixelagents-web.yml  deploy-ship-control-panel.yml  deploy-soc-gateway.yml  refresh-detection-rules.yml
maf/: README.md  pyproject.toml
maf/aisoc_maf/: __init__.py  cli.py  config.py
maf/aisoc_maf/agents/: __init__.py  triage.py
maf/aisoc_maf/tools/: openrouter_via_gateway.py  soc_gateway.py
maf/playbooks/: triage_policy.md  triage_sop.md
pixelagents_web/: Dockerfile  pyproject.toml
pixelagents_web/app/: server.py
pixelagents_web/app/static/: agent_activity.js  agent_comm.js  audit.js  auto_pickup_badge.js  bottom_bar_layout.js  chat_drawer.js  chat_popup.js  config.js  dashboard.js  default_zoom.js  hitl_panel.js  improvements.js  incidents_panel.js  kb.js  live_incident_banner.js  rules.js  threat_horizon.js
pixelagents_web/app/ui_dist/: index.html
pixelagents_web/app/ui_dist/assets/: browserMock-B0HR-Vat.js  browserMock-B1jjx-jO.js  browserMock-BE5-YlFX.js  browserMock-BHZH8l1a.js  browserMock-BJNSaLPt.js  browserMock-BMJ74Zcr.js  browserMock-BNazdNVT.js  browserMock-CGvWlLFT.js  browserMock-CJOH-1VB.js  browserMock-CT4ww2Pl.js  browserMock-C_sxhbm8.js  browserMock-Ca0ILYDc.js  browserMock-CaFapnAE.js  browserMock-CnhW80dS.js  browserMock-CpjQQyxh.js  browserMock-D9lH8Z7c.js  browserMock-DHwyna35.js  browserMock-DSZ0FzGQ.js  browserMock-DaJqpEgU.js  browserMock-Dk81-luF.js  browserMock-Dp2j7wUg.js  browserMock-DrD3cWrP.js  browserMock-DvcggxjH.js  browserMock-WyK9637I.js  browserMock-b-tDGW-V.js  browserMock-r82sxVKi.js  index-3T3xU2s1.js  index-B-lfXmRU.js  index-BhwnwA8n.js  index-Bq95zHE9.js  index-BvfKEQi_.js  index-C-7mn9YN.js  index-C2r7-zYd.js  index-CHAynogf.js  index-CHuYh5Xw.css  index-CI4lyzZM.js  index-C_ah9HkM.js  index-CbwyiMFR.js  index-CeIUmHHz.js  index-CsOodzxI.js  (+14 more)
pixelagents_web/ui/src/: App.tsx  browserMock.ts
pixelagents_web/ui/src/hooks/: useExtensionMessages.ts
runner/: Dockerfile  openapi.investigator.yaml  openapi.reporter.yaml  openapi.triage.yaml  openapi.yaml  pyproject.toml
runner/aisoc_runner/: __init__.py  server.py
scripts/: aisoc_env.sh  deploy_agents.py  deploy_foundry_agents.py  deploy_foundry_project.py  sync_github_repo_var.sh
ship-control-panel/: Dockerfile  README.md  otel.js  package-lock.json  package.json  tsconfig.json
ship-control-panel/app/: globals.css  layout.tsx  page.tsx
ship-control-panel/lib/: auth.ts
ship-control-panel/scripts/: generate_camera_gifs.py
terraform/: azure-sentinel-test-DEPRECATED.md
terraform/1-deploy-sentinel/: MDE.md  PHASES.md  README.md  SECURITY.md  aisoc_kv.tf  appinsights_shipcp.tf  containerapp_diagnostics.tf  main.tf  mde_kv.tf  outputs.tf  post_apply_scripts.tf  providers.tf  sentinel_rules.tf  ship_control_panel.tf  sysmon.tf  terraform.tfvars.example  variables.tf
terraform/2-deploy-aisoc/: PHASES.md  acr.tf  bing_grounding.tf  company_context_kb.tf  data.tf  detection_rules_kb.tf  foundry.tf  foundry_deployments.tf  gateway_keys.tf  main.tf  orchestrator.tf  outputs.tf  post_apply_scripts.tf  providers.tf  random.tf  runner.tf  runner_outputs.tf  terraform.tfvars.example  variables.tf
terraform/3-deploy-pixelagents-web/: README.md  data.tf  main.tf  providers.tf  (+3 more)
(+113 files in other folders)
