[project]
name = "aisoc-maf"
version = "0.1.0"
description = "AISOC demo agents built with Microsoft Agent Framework"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
]

[project.scripts]
aisoc = "aisoc_maf.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicit package discovery to avoid including non-package folders (e.g. playbooks/)
packages = ["aisoc_maf", "aisoc_maf.agents", "aisoc_maf.tools"]

[tool.ruff]
line-length = 100
