[project]
name = "pixelagents-web"
version = "0.1.0"
description = "Minimal web app to visualize AISOC agent activity (PixelAgents-style)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  # Needed for the ad-hoc chat endpoint that invokes Foundry agents.
  "requests>=2.31",
  "azure-identity>=1.15",
]

[project.scripts]
pixelagents-web = "app.server:main"
