[project]
name = "pixelagents-web"
version = "0.1.0"
description = "Minimal web app to visualize AISOC agent activity (PixelAgents-style)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  # Needed for FastAPI's Form(...) — used by the /login POST handler.
  # Without it, FastAPI raises at app start when it walks route deps.
  "python-multipart>=0.0.9",
  # Needed for the ad-hoc chat endpoint that invokes Foundry agents.
  "requests>=2.31",
  "azure-identity>=1.15",
  # Used by /api/foundry/agents/instructions to read each agent's
  # current instructions blob from Foundry. Same SDK the Phase-2
  # deploy script uses to write them, so the call shape is symmetric.
  # Pinned to match the orchestrator's pin (function_app/requirements.txt)
  # — that version is known-good in this repo. It's a beta SDK and pip's
  # pre-release resolution with a >= range can be flaky, so the equality
  # is intentional.
  "azure-ai-projects==1.0.0b11",
]

[project.scripts]
pixelagents-web = "app.server:main"
