[project]
name = "aisoc-runner"
version = "0.1.0"
description = "AISOC tool runner (executes function tool calls against SOCGateway)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "requests>=2.32.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aisoc_runner"]
